--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,11 @@
 web:
   build: ./web
+  command: python -u web/app.py
   ports:
-   - "5000:5000"
+    - "5000:5000"
   volumes:
-   - .:/code
+    - .:/simul
+  links:
+    - db
+db:
+  image: mongo:3.0.2
