--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,9 +1,4 @@
-FROM ubuntu:latest
-RUN apt-get update -y
-RUN apt-get install -y python-pip python-dev build-essential
-COPY . /app
-WORKDIR /app
-RUN pip install --upgrade pip
+FROM python:2.7
+ADD . /simul
+WORKDIR /simul
 RUN pip install -r requirements.txt
-ENTRYPOINT ["python"]
-CMD ["app.py"]
